[project]
name = "audio-converter"
version = "0.1.0"
description = "A simple python project to convert audio files using ffmpeg"
authors = [
    {name = "delitroz",email = "mdelitroz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "ffmpeg-python (>=0.2.0,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
