[project]
name = "audio-converter"
version = "0.1.0"
description = "A simple python project to convert audio files using ffmpeg"
authors = [
    {name = "delitroz",email = "mdelitroz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ffmpeg-python (>=0.2.0,<0.3.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.1.0,<8.0.0)"
]
